<resources>
    <string name="app_name">WalkingApp</string>
    <string name="title_activity_google_map">GoogleMapActivity</string>
    <string name="todaywalk">Today Walk</string>
    <string name="km">km</string>
    <string name="record">Record</string>
    <string name="info">Info</string>
    <string name="language">Languages</string>
    <string name="googlemap">Google Map</string>
    <string name="localpos">Local Position</string>
    <string name="tranditionalchinese">Tranditional Chinese</string>
    <string name="simplifliedchinese">Simpliflied Chinese</string>
    <string name="english">English</string>
    <string name="route">Route: \n</string>
    <string name="howtoaccess">How to Access: \n</string>
    <string name="lattitudedis">Lattitude: \n</string>
    <string name="longitudedis">Longitude: \n</string>
    <string name="lattitude">Lattitude:\ </string>
    <string name="longitude">Longitude:\ </string>
    <string name="address">Address:\ </string>
    <string name="city">City:\ </string>
    <string name="country">Country:\ </string>
    <string name="infocontent">This Application is created by:\n\nYuen Shing Hong\nNg Ka Ki\nTsang Yuk Ting\nWong Wing Yin\nChong Pui Shan</string>

</resources>