<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/localpostitle"
        android:text="@string/localpos"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lattitude"
        android:text="@string/lattitude"
        android:textSize="25dp"
        android:layout_below="@+id/localpostitle"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/longitude"
        android:layout_alignStart="@id/lattitude"
        android:layout_below="@+id/lattitude"
        android:text="@string/longitude"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:layout_alignStart="@id/lattitude"
        android:layout_below="@+id/longitude"
        android:text="@string/address"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:layout_alignStart="@id/lattitude"
        android:layout_below="@+id/address"
        android:text="@string/city"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country"
        android:layout_alignStart="@id/lattitude"
        android:layout_below="@+id/city"
        android:text="@string/country"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"/>
</RelativeLayout>
