<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/languageDialog"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="0"
        android:rowCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/localpostitle"
            android:text="@string/language"
            android:textSize="25dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/TCN"
            android:text="@string/tranditionalchinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/SCN"
            android:text="@string/simplifliedchinese"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/ENG"
            android:text="@string/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"/>

    </LinearLayout>

</RelativeLayout>